# happy-place-platform

./: .gitattributes  .gitignore  DEPLOYMENT.md  README.md  roadmap.md
archive/2026-07-backend-prototype/: .env.development.example  .env.example  .env.production.example  .env.staging.example  README.md  notes.md  pyproject.toml  smoke_test.py
archive/2026-07-backend-prototype/apps/admin/: __init__.py  admin.html
archive/2026-07-backend-prototype/apps/api/: appointments.py  auth.py  customers.py  estimate.py  leads.py  main.py  ops.py  project.py  projects.py  review.py  webhooks.py
archive/2026-07-backend-prototype/tests/: test_reliability.py
constitution/: canonical_business_objects.md
docs/: ARCHITECTURE.md  ARCHITECTURE_1.md  AUDIT-024.md  AUDIT-025.md  AUTHORITY-INTEGRITY-AUDIT.md  AUTHORITY-UNIQUENESS-AUDIT.md  COMPREHENSIVE-AUDIT-REPORT.md  architecture-decisions.md  authentication-architecture.md  developer-guide.md  extension-points.md  google-drive-photo-pipeline.md  material-knowledge-structure.md  migration-report.md  oregon-regional-authority.md  phase1-migration-report.md  phase2-ownership-audit.md  platform-agnostic-architecture.md  pricing-engine.md  project-form-pipeline.md  provider-factory-architecture.md  review-pipeline.md  service-media-coverage-audit.md
scripts/: test-deployment.ts
website/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_ARCHAEOLOGY_REPORT.md  AUTHORITY_RECONCILIATION_FINAL.md  CONSTITUTIONAL_REPOSITORY_DISCOVERY.md  DIRECTIVE_038_GOOGLE_WORKSPACE_AUDIT.md  DIRECTIVE_041_OPERATIONAL_RECOVERY_AUDIT.md  _fix_svc.cjs  (+25 more)
(+287 files in other folders)
